--- a/style.css
+++ b/style.css
@@ -315,6 +315,10 @@ a:hover::before{
     z-index: -2;
     pointer-events: none;
 }
+.social-icon a{
+    color: black;
+    text-decoration: none;
+}
 .page1{
     width: 100vw;
     height: 120vh;
@@ -1205,6 +1209,7 @@ font-weight: 300;
   .skills{
     width: 100vw;
     height: 70vh;
+    background-color: #FFFFFF;
   
   }
   .skills img{
